--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -71,26 +71,47 @@
             </div>
           </div>
           <div v-if="searchResult" class="field has-text-centered">
-              <p class="subtitle has-text-danger"><b>[[searchResult]]</b></p>
+            <p class="subtitle has-text-danger"><b>Current Location: [[ searchResult.current ]]</b></p>
+            <div v-if="searchResult.history">
+              <p class="subtitle has-text-info"><b>Previous Locations: [[ searchResult.history.join(", ") ]] </b></p>
+            </div>
           </div>
         </form>
       </div>
 
       <!-- Display dewars in need of refilling (show up to 5)-->
       <div class="column is-one-third solid-border">
-        <h2 class="title has-text-centered">Dewars that need refilling</h2>
-        <ul>
-          <li v-for="dewar in dewars.slice(0, 5)">
-            <p class="is-size-5 has-text-centered has-text-danger"><b>[[dewar]]</b></p>
-          </li>
-        </ul>
-        <footer class="footer has-background-white-ter is-paddingless">
-          <div class="content has-text-centered">
-            <p>(Scan dewars back into the same position after refilling)</p>
-          </div>
-        </footer>
+          <transition name="fade" mode="out-in">
+          <section v-if="show_dewars" key="1">
+              <h2 class="title has-text-centered">Dewars that need refilling</h2>
+              <ul>
+                <li v-for="dewar in refill_dewars.slice(0, 5)">
+                  <p class="is-size-5 has-text-centered has-background-danger has-text-black"><b>[[dewar]]</b></p>
+                </li>
+              </ul>
+              <footer class="footer has-background-white-ter is-paddingless">
+                <div class="content has-text-centered">
+                  <p>(Scan dewars back into the same position after refilling)</p>
+                </div>
+              </footer>
+          </section>
+          <section v-else key="2">
+            <h2 class="title has-text-centered">Dewars that need dispatching</h2>
+            <ul>
+              <li v-for="dewar in dispatch_dewars.slice(0, 5)">
+                <p class="is-size-5 has-text-centered has-background-warning has-text-black"><b>[[dewar]]</b></p>
+              </li>
+            </ul>
+            <footer class="footer has-background-white-ter is-paddingless">
+              <div class="content has-text-centered">
+                <p>(Dewars in need of dispatch - clear once removed from rack)</p>
+              </div>
+            </footer>
+          </section>
+          </transition>
       </div>
-    </div>
+
+    </div> <!-- End of top row of columns (form elements) -->
 
     <!-- 
       Area for messages from back end 
@@ -163,8 +184,8 @@
         // Change default delimters to avoid clash with jinja2
         delimiters: ["[[","]]"],
         data: {
-          // Array for dewars that need refilling...        
-          dewars: [],
+          // Flag to toggle dispatch dewars or refill dewars
+          show_dewars: true,
           // Data for rack locations in JSON structure
           // Data from backend is a list [barcode, arrivalData, facilityCode]
           rack_locations: {},
@@ -195,11 +216,32 @@
             }
           },
           searchResult: function(newValue) {
-            // Close after 3 seconds
+            // Close after 5 seconds
             if (newValue) {
-              setTimeout(this.clearMessages, 3000);
+              setTimeout(this.clearMessages, 5000);
             }
           },
+        },
+
+        computed: {
+          // This is used to display 5 dewars that need refilling
+          // If they have dispatch requested set ignore them (they are leaving the facility so don't need LN2)
+          refill_dewars: function() {
+            const self = this
+            let dewars = Object.keys(this.rack_locations).filter((rack) => {
+              return self.rack_locations[rack].status !== 'dispatch-requested' && self.rack_locations[rack].needsLN2 === true
+            })
+            return dewars
+          },
+
+          // This is used to display 5 dewars that need to be dispatched
+          dispatch_dewars: function() {
+            const self = this
+            let dewars = Object.keys(this.rack_locations).filter((rack) => {
+              return self.rack_locations[rack].status === 'dispatch-requested'
+            })
+            return dewars
+          }
         },
 
         // Lifecycle hook - called when Vue instance has been created...
@@ -215,12 +257,13 @@
 
         // Lifecycle hook - called when Vue is mounted on the page (trigger first get request)...
         mounted: function() {
-          console.log("Vue component mounted")
-
           // When page is loaded set focus to the input location element
           this.$refs.barcode.focus();
 
           this.getBarcodes()
+
+          // Every 5 seconds alternate between dewars that need refilling and dispatch
+          setInterval(this.swapDispatchDewarView, 5000)
         },
 
         methods: {
@@ -236,18 +279,15 @@
 
               axios.get("/{{api_prefix}}/dewars")
               .then(function(response) {
-                console.log(response.data)
                 let json = response.data
-                let racks = racklist //Object.keys(json); racklist is in correct order for rendering
-                // We need to recalculate the dewars in need of refilling...
-                self.dewars = []
+                let racks = racklist // We don't use this because Object.keys(json) is undordered: racklist is in correct order for rendering
+                let rack_data = {} // Placeholder for new data
                 
                 racks.forEach(function(rack) {
                   let barcode = json[rack][0]
                   let arrivalDate = json[rack][1]
                   let facilityCode = json[rack][2]
                   let status = json[rack][3]
-                  // Could add facility code here as [2]
                   let needsLN2 = false
 
                   // Check here if arrivalData > 5 days    
@@ -258,13 +298,14 @@
                     let deltaTime = nowSecs - lastFillSeconds
 
                     if (deltaTime > 5*24*3600) {
-                      console.log("Dewar in rack location " + rack + " needs refilling")
                       needsLN2 = true
-                      self.dewars.push(rack)
                     }
                   }
-                  self.rack_locations[rack] = {'barcode': barcode, 'arrivalDate': arrivalDate, 'needsLN2': needsLN2, 'facilityCode': facilityCode, 'status': status}
+                  rack_data[rack] = {'barcode': barcode, 'arrivalDate': arrivalDate, 'needsLN2': needsLN2, 'facilityCode': facilityCode, 'status': status}
                 })
+                // Re-assign rack_locations property to trigger reactivity
+                // Otherwise Vue has a hard time running computed properties
+                self.rack_locations = Object.assign(rack_data)
               })
               .catch(function(error) {
                 console.log("Error getting initial data " + error)
@@ -340,23 +381,35 @@
             },
 
             // Search the database for a dewar with the specified facility code (DLS-MX-1234)
+            // Some values in the history can be null so we need to handle those
             onFindDewar: function(event) {
               event.preventDefault()
 
               if (this.facilitycode !== "") {
-                console.log("find dewar " + this.facilitycode)   
-              
                 self = this
                 let facilitycode = this.facilitycode
 
                 axios.get("/{{api_prefix}}/dewars/find", {params: {'fc':facilitycode}})
                 .then(function(response) {
                   let json = response.data
-                  let location = json['storageLocation']
-                  self.searchResult = location.toUpperCase()
+
+                  // Changed location to an array to show recent history...
+                  let locations = json['storageLocations']
+                  // Convert to uppercase if we have a value (handle null entries)
+                  locations.map(function(item) {
+                    return item ? item.toUpperCase() : "none"
+                  })
+                  let current = locations[0] ? locations[0] : "none"
+
+                  // Convert to uppercase if we have a value (handle null entries)
+                  let history = locations.slice(1).map(function(item) {
+                    return item ? item.toUpperCase() : "none"
+                  })
+
+                  self.searchResult = {"current": current, "history": history}
                 })
                 .catch(function(error) {
-                  self.searchResult = "Not Found"
+                  self.searchResult = {"current": "Not Found"}
                 })
                 .finally(function() {
                   // Clear up after query - could reset facility code input here?
@@ -400,8 +453,6 @@
                   let self = this
                   let barcode = this.rack_locations[this.locationToRemove]['barcode']
                   let location = this.locationToRemove
-
-                  console.log('Removing dewar from rack location ' + this.locationToRemove + " barcode " + barcode)
 
                   axios.delete("/{{api_prefix}}/dewars", {params: {'location': this.locationToRemove}})
                   .then(function(response) {
@@ -447,6 +498,9 @@
               console.log("SAD BEEPS")
               sounds.fail.play()
             },
+            swapDispatchDewarView: function() {
+              this.show_dewars = !this.show_dewars
+            }
       },
       })
     
@@ -465,6 +519,13 @@
 
     div.box {
       cursor: pointer;
+    }
+
+    .fade-enter-active, .fade-leave-active {
+      transition: opacity .5s
+    }
+    .fade-enter, .fade-leave-to {
+      opacity: 0
     }
   </style>
 </body>
