Added placeholder for zone 4 access

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
             <!-- Layout for application links -->
             <div class="columns">
-                <div class="column is-one-third">
+                <div class="column is-one-quarter">
                     <a href="/stores/">
                         <div class="box notification is-success">
                             <p class="title">Stores Dewar Management</p>
@@ -30,7 +30,7 @@
                     </a>
                 </div>
 
-                <div class="column is-one-third">
+                <div class="column is-one-quarter">
                     <a href="/zone6/">
                         <div class="box notification is-success">
                             <p class="title">Zone 6 Dewar Management</p>
@@ -39,7 +39,16 @@
                     </a>
                 </div>
 
-                <div class="column is-one-third">
+                <div class="column is-one-quarter">
+                    <a href="/zone4/">
+                        <div class="box notification is-success">
+                            <p class="title">Zone 4 Dewar Management</p>
+                            <p class="content">To handle dewars in the WES storage unit</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="column is-one-quarter">
                     <a  href="/ebic/">
                         <div class="box notification is-success">
                             <p class="title">eBIC Dewar Management</p>
@@ -49,7 +58,7 @@
                 </div>
             </div>
 
-            <div class="columns">
+            <!-- <div class="columns">
                 <div class="column is-one-third">
                     <a href="/stores/original">
                         <div class="box notification is-primary">
@@ -74,7 +83,7 @@
                     </a>
                 </div>
 
-            </div>
+            </div> -->
 
             <!-- Footer with link to scisoft -->
             <footer class="footer has-text-centered">For questions about these applications, please contact Scientific Software <a href="mailto:scientificsoftware@diamond.ac.uk?Subject=ISPyBLogistics">here</a></foote</div> <!-- END of main container -->
