--- a/templates/vue-dewars.html
+++ b/templates/vue-dewars.html
@@ -187,6 +187,8 @@
     // Used to enforce correct ordering of rack locations
     var racklist = {{rack_locations | tojson() }}
 
+    var beamlines = {{ beamline_locations | tojson() }};
+
     // Single Vue instance to manage this page
     var app = new Vue({
         el: '#app',
@@ -346,14 +348,17 @@
                   let barcode = this.barcode
                   let location = this.location
 
-                  // Is this location in our list?
-                  let hasLocation = this.rack_locations.hasOwnProperty(this.location.toUpperCase())
-                  
-                  if (hasLocation === false) {
+                  // WE need to search for rack locations plus where the dewar might be sent (beamlines)
+                  let full_locations = beamlines.concat(Object.keys(this.rack_locations))
+
+                  let hasLocation = full_locations.indexOf(this.location.toUpperCase())
+
+                  if (hasLocation < 0) {
                     // Something wrong - not a location we should set
                     self.message = 'Error - location ' + this.location + ' not allowed for this page'
                     self.isError = true
                     this.location = ''
+                    self.playFail();
                     return
                   }
 
